actualize project dependencies and plugins to latest
update dependency versions (spring boot - 2.6.0, spring cloud - 2021.0.0, junit 5,) plugin versions maven compiler, surefire and failsafe plugins, java 11